tests/analyzer/errors/undeclared_field_access.rv
struct Person {}

fn main() {
    var p = Person.{}
    p.age
}
